style.css
/* ... */
.popup-container {
	position: absolute;
	inset: var(--margin-unit) var(--margin-unit) auto auto;
}

.popup-toggle {
	cursor: pointer;
}

.popup-backdrop-button {
	position: fixed;
	z-index: 3;
	inset: 0;
	outline-offset: -3px;
	padding: initial;
	width: 100vw;
	height: 100vh;
	-webkit-backdrop-filter: brightness(.6);
	backdrop-filter: brightness(.6);
}

.popup {
	position: fixed;
	z-index: 3; /* Put it above everything else except the modal dialog. */
	/* TODO: Animate expansion/collapse. */
	inset: auto 0 0 0;
	width: 100vw;
	background-color: rgba(var(--background-color-rgb), .5);
	-webkit-backdrop-filter: blur(50px);
	backdrop-filter: blur(50px);
	border: solid var(--border-width) var(--border-color);
	border-left: none;
	border-right: none;
}

@supports not ((backdrop-filter: blur(50px)) or (-webkit-backdrop-filter: blur(50px))) {
	.popup {
		background-color: rgb(var(--background-color-rgb));
	}
}

@media (prefers-contrast: more) {
	.popup {
		background-color: rgb(var(--background-color-rgb));
	}
}

.popup-toggle[aria-expanded="false"] ~ .popup {
	display: none;
}

.popup button {
	cursor: pointer;
	padding: calc(2 * var(--margin-unit));
	width: 100%;
	text-align: initial;
}

.empty-result {
	text-align: center;
}

.flex-padding {
	flex-grow: 1;
}

.load-more-feed {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: var(--hamburger-length);
	text-align: center;
}

.load-more-feed-button {
	width: 100%;
	height: 100%;
	font-size: initial;
}

.social-icon {
	vertical-align: middle;
	width: 2em;
	height: 2em;
	fill: currentColor;
}

.error-log {
	max-height: calc(100vh - 260px);
	min-height: 2em;
	overflow-y: scroll;
	background-color: red;
	color: white;
	font-family:
		'Helvetica Neue',
		'ヒラギノ角ゴ Pro W4',
		'Hiragino Kaku Gothic Pro',
		'メイリオ',
		'Meiryo',
		sans-serif;
}

.error-log > li {
	margin: var(--margin-unit);
}

.error-log :any-link {
	color: #0FF;
}

.dismiss-error {
	float: right;
	border-radius: 5px;
	color: #000;
	background-color: #FFF;
}

.modal-backdrop {
	position: fixed;
	inset: 0;
	z-index: 4; /* Put it above everything else. */
	border: none;
	width: 100vw;
	max-width: initial;
	height: 100vh;
	max-height: initial;
	padding: 0;
	background: none;
}

.modal-backdrop:not([open]) {
	display: none;
}

.modal {
	display: flex;
	flex-direction: column;
	height: 100vh;
	color: var(--color);
}

.about li {
	display: list-item;
}

.about-links {
	display: grid;
	grid-template-columns: auto 1fr;
}

.about-links > dt {
	grid-column: 1;
	display: list-item;
	margin-left: 40px;
}

.about-links > dd {
	grid-column: 1;
}

.dialog-title-bar {
	display: flex;
	align-items: center;
	border-bottom: solid var(--border-width) var(--border-color);
	padding: 0 calc(2 * var(--margin-unit));
	height: var(--hamburger-length);
	flex-shrink: 0;
	background-color: rgba(var(--background-color-rgb), .8);
	-webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
}

@supports not ((backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px))) {
	.dialog-title-bar {
		background-color: rgb(var(--background-color-rgb));
	}
}

@media (prefers-contrast: more) {
	.dialog-title-bar {
		background-color: rgb(var(--background-color-rgb));
	}
}

.dialog-title-bar-button {
	padding: initial;
	width: 16px;
	height: 16px;
	cursor: pointer;
	stroke: currentColor;
}

.modal-back-button:disabled {
	visibility: hidden;
}

.dialog-title {
	flex-grow: 1;
	text-align: center;
}

.dialog-content {
	padding: calc(2 * var(--margin-unit));
	padding-top: 0;
	height: 100%;
	background-color: rgb(var(--background-color-rgb));
	overflow-y: scroll;
	overscroll-behavior: none contain;
}

.modal-backdrop-button {
	position: absolute;
	inset: 0;
	z-index: -1;
	outline-offset: -3px;
	padding: initial;
	width: 100%;
	height: 100%;
}

.copyright-loading {
	margin: auto;
}

.copying-error {
	color: red;
}

.copying blockquote p {
	white-space: pre-wrap;
}

.kbd-help-dl {
	display: grid;
	grid-template-columns: auto 1fr;
}

.kbd-help-dl > dt {
	grid-column: 1;
}

.kbd-help-dl > dd {
	grid-column: 2;
}
/* ... */

